@@ -170,7 +170,7 @@ class EnvConfig implements ConfigInterface
      */
     public function __get($name)
     {
-        if ('' . $name == 'name') {
+        if ($name == 'name') {
             return $this->name;
         }
         throw new OutOfBoundsException(get_class($this) . ' instance has no property[' . $name . '].');
